tests/duarouter/errors/empty_vtype/errors.duarouter
Error: Attribute 'id' is missing in definition of vType
Error: VType cannot be created
Quitting (on error).
